# blowbox-2018

./: .gitmodules  CMakeLists.txt  README.md
cmake/: FindDirectX.cmake  SetSolutionFolder.cmake
doc/: doxyfile
ico/: blowbox-ico-template.psd
projects/test/: main.lua
src/: CMakeLists.txt
src/builder/: CMakeLists.txt
src/client/: CMakeLists.txt
src/client/client/: client_runtime.cc  client_runtime.h  main.cc
src/core/: CMakeLists.txt
src/core/core/: core.cc  core.h  logger.cc  logger.h
src/core/core/data/: functional.h  map.h  path.h  queue.h  string.h  unordered_map.h  vector.h
src/core/core/memory/: memory.cc  memory.h  pointer_math.cc  pointer_math.h
src/core/core/memory/allocators/: allocator.cc  allocator.h  eastl_allocator.cc  eastl_allocator.h  malloc_allocator.cc  malloc_allocator.h
src/editor/: CMakeLists.txt
src/editor/editor/: assets_dock.cc  assets_dock.h  console_dock.cc  console_dock.h  editor.cc  editor.h  editor_runtime.cc  editor_runtime.h  hierarchy_dock.cc  hierarchy_dock.h  inspector_dock.cc  inspector_dock.h  main.cc  main_window.cc  main_window.h  main_window.ui
src/editor/editor/ui/: main_window.cc  main_window.h  main_window.ui
src/editor/style/: style.qrc
src/engine/: CMakeLists.txt
src/engine/engine/: engine.cc  engine.h
src/engine/engine/services/: config_service.cc  config_service.h  iservice.cc  iservice.h  script_service.cc  script_service.h
src/graphics/: CMakeLists.txt
src/scripting/: CMakeLists.txt
src/scripting/scripting/: script_state.cc  script_state.h  script_util.h
