set (BLOWBOX_IS_BUILDING_CORE       ON)
set (BLOWBOX_IS_BUILDING_GRAPHICS   ON)
set (BLOWBOX_IS_BUILDING_SCRIPTING  ON)
set (BLOWBOX_IS_BUILDING_BUILDER    ON)
set (BLOWBOX_IS_BUILDING_ENGINE     ON)
set (BLOWBOX_IS_BUILDING_CLIENT     ON)
set (BLOWBOX_IS_BUILDING_EDITOR     ON)

#set (BLOWBOX_BUILD_CORE       ON CACHE BOOL   "If enabled, the blowbox core project will be added to the solution. Disabling this will cause the following projects not to be added: GRAPHICS, SCRIPTING, BUILDER, ENGINE, CLIENT, EDITOR." INTERNAL)
set (BLOWBOX_BUILD_CORE       ON)
set (BLOWBOX_BUILD_GRAPHICS   ON CACHE BOOL   "If enabled, the blowbox graphics project will be added to the solution. Disabling this will cause the following projects not to be added: ENGINE, CLIENT, EDITOR.")
set (BLOWBOX_BUILD_SCRIPTING  ON CACHE BOOL   "If enabled, the blowbox scripting project will be added to the solution. Disabling this will cause the following projects not to be added: ENGINE, CLIENT, EDITOR.")
set (BLOWBOX_BUILD_BUILDER    ON CACHE BOOL   "If enabled, the blowbox builder project will be added to the solution. Disabling this will cause the following projects not to be added: ENGINE, CLIENT, EDITOR.")
set (BLOWBOX_BUILD_ENGINE     ON CACHE BOOL   "If enabled, the blowbox engine project will be added to the solution. Disabling this will cause the following projects not to be added: CLIENT, EDITOR.")
set (BLOWBOX_BUILD_CLIENT     ON CACHE BOOL   "If enabled, the blowbox client executable will be added to the solution.")
set (BLOWBOX_BUILD_EDITOR     ON CACHE BOOL   "If enabled, the blowbox editor project will be added to the solution.")

if (NOT BLOWBOX_BUILD_CORE)
  set (BLOWBOX_IS_BUILDING_GRAPHICS   OFF)
  set (BLOWBOX_IS_BUILDING_SCRIPTING  OFF)
  set (BLOWBOX_IS_BUILDING_BUILDER    OFF)
  set (BLOWBOX_IS_BUILDING_ENGINE     OFF)
  set (BLOWBOX_IS_BUILDING_CLIENT     OFF)
  set (BLOWBOX_IS_BUILDING_EDITOR     OFF)
endif (NOT BLOWBOX_BUILD_CORE)

if (NOT BLOWBOX_BUILD_GRAPHICS)
  set (BLOWBOX_IS_BUILDING_GRAPHICS   OFF)
  set (BLOWBOX_IS_BUILDING_ENGINE     OFF)
  set (BLOWBOX_IS_BUILDING_CLIENT     OFF)
  set (BLOWBOX_IS_BUILDING_EDITOR     OFF)
endif (NOT BLOWBOX_BUILD_GRAPHICS)

if (NOT BLOWBOX_BUILD_SCRIPTING)
  set (BLOWBOX_IS_BUILDING_SCRIPTING  OFF)
  set (BLOWBOX_IS_BUILDING_ENGINE     OFF)
  set (BLOWBOX_IS_BUILDING_CLIENT     OFF)
  set (BLOWBOX_IS_BUILDING_EDITOR     OFF)
endif (NOT BLOWBOX_BUILD_SCRIPTING)

if (NOT BLOWBOX_BUILD_BUILDER)
  set (BLOWBOX_IS_BUILDING_BUILDER    OFF)
  set (BLOWBOX_IS_BUILDING_ENGINE     OFF)
  set (BLOWBOX_IS_BUILDING_CLIENT     OFF)
  set (BLOWBOX_IS_BUILDING_EDITOR     OFF)
endif (NOT BLOWBOX_BUILD_BUILDER)

if (NOT BLOWBOX_BUILD_ENGINE)
  set (BLOWBOX_IS_BUILDING_ENGINE     OFF)
  set (BLOWBOX_IS_BUILDING_CLIENT     OFF)
  set (BLOWBOX_IS_BUILDING_EDITOR     OFF)
endif (NOT BLOWBOX_BUILD_ENGINE)

if (NOT BLOWBOX_BUILD_CLIENT)
  set (BLOWBOX_IS_BUILDING_CLIENT     OFF)
endif (NOT BLOWBOX_BUILD_CLIENT)

if (NOT BLOWBOX_BUILD_EDITOR)
  set (BLOWBOX_IS_BUILDING_EDITOR     OFF)
endif (NOT BLOWBOX_BUILD_EDITOR)

if (BLOWBOX_IS_BUILDING_CORE)
  add_subdirectory("core")
elseif(BLOWBOX_BUILD_CORE)
  message (WARNING "Enabled building blowbox core, but some other BLOWBOX_BUILD_* variable forces this project to not be added to the solution. Blowbox core has NOT been added to the solution.")
endif (BLOWBOX_IS_BUILDING_CORE)

if (BLOWBOX_IS_BUILDING_GRAPHICS)
  add_subdirectory("graphics")
elseif(BLOWBOX_BUILD_GRAPHICS)
  message (WARNING "Enabled building blowbox graphics, but some other BLOWBOX_BUILD_* variable forces this project to not be added to the solution. Blowbox graphics has NOT been added to the solution.")
endif (BLOWBOX_IS_BUILDING_GRAPHICS)

if (BLOWBOX_IS_BUILDING_SCRIPTING)
  add_subdirectory("scripting")
elseif(BLOWBOX_BUILD_SCRIPTING)
  message (WARNING "Enabled building blowbox scripting, but some other BLOWBOX_BUILD_* variable forces this project to not be added to the solution. Blowbox scripting has NOT been added to the solution.")
endif (BLOWBOX_IS_BUILDING_SCRIPTING)

if (BLOWBOX_IS_BUILDING_BUILDER)
  add_subdirectory("builder")
elseif(BLOWBOX_BUILD_BUILDER)
  message (WARNING "Enabled building blowbox builder, but some other BLOWBOX_BUILD_* variable forces this project to not be added to the solution. Blowbox builder has NOT been added to the solution.")
endif (BLOWBOX_IS_BUILDING_BUILDER)

if (BLOWBOX_IS_BUILDING_ENGINE)
  add_subdirectory("engine")
elseif(BLOWBOX_BUILD_ENGINE)
  message (WARNING "Enabled building blowbox engine, but some other BLOWBOX_BUILD_* variable forces this project to not be added to the solution. Blowbox engine has NOT been added to the solution.")
endif(BLOWBOX_IS_BUILDING_ENGINE)

if (BLOWBOX_IS_BUILDING_CLIENT)
  add_subdirectory("client")
elseif(BLOWBOX_BUILD_CLIENT)
  message (WARNING "Enabled building blowbox client, but some other BLOWBOX_BUILD_* variable forces this project to not be added to the solution. Blowbox client has NOT been added to the solution.")
endif (BLOWBOX_IS_BUILDING_CLIENT)

if (BLOWBOX_IS_BUILDING_EDITOR)
  add_subdirectory("editor")
elseif(BLOWBOX_BUILD_EDITOR)
  message (WARNING "Enabled building blowbox editor, but some other BLOWBOX_BUILD_* variable forces this project to not be added to the solution. Blowbox editor has NOT been added to the solution.")
endif (BLOWBOX_IS_BUILDING_EDITOR)